tests/baselines/reference/checkJsFiles3.errors.txt
a.js(3,1): error TS2322: Type 'number' is not assignable to type 'string'.


==== a.js (1 errors) ====
    // @ts-check
    var x = "string";
    x = 0;
    ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.